--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ footer {
     }
 
     .main-section .wrapper {
-        gap 40px;
+        gap: 40px;
         /* 📍 Отступ между изображением и блоком с текстом */
     }
 
@@ -270,7 +270,7 @@ footer {
 
     .about-section .wrapper,
     .info-wrapper {
-        gap 50px;
+        gap: 50px;
         /* 📍 Отступ между изображением и блоком с текстом */
     }
 }
